--- a/.env
+++ b/.env
@@ -9,6 +9,8 @@ NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
 
 MONGODB_URI=mongodb+srv://alondrobitsky:VE2o3AmnQnj8PFjN@cluster0.nnzdbdx.mongodb.net/?retryWrites=true&w=majority
 
+WEBHOOK_SECRET=whsec_PIEdexClFbMxMPquFCbMm2XlxVjqNen3
+
 # VE2o3AmnQnj8PFjN
 
 
